tests/cert-managment/test_ingress.yaml
apiVersion: cert-manager.io/v1alpha2
kind: Certificate
metadata:
  name: certificate-name
spec:
  secretName: tls-cert
  duration: 24h
  renewBefore: 12h
  commonName: binder.bioimagearchive.org
  dnsNames:
  - binder.bioimagearchive.org
  issuerRef:
    name: letsencrypt-prod
    kind: ClusterIssuer
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
  name: ingress-rule
  # namespace: default
spec:
  rules:
  - host: binder.bioimagearchive.org
    http:
      paths:
      - backend:
          serviceName: backend-service
          servicePort: 8080
  tls:
  - hosts:
    - binder.bioimagearchive.org
    secretName: tls-cert
